Strongly typed Datastore configuration - Fixes #2088
- Updates from review
- Update datastore config checks touse isBlank()
- Update docs
